--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="style.css">
       <title>自己紹介</title>
+      <meta http-equiv="Content-Style-Type" content="text/css">
+      <style type="text/css">
+      <!--
+      body { background: #C0C0C0 url(back.png) no-repeat center center scroll;
+             background-size: cover;}
+      -->
+      </style>
    </head>
 
    <body>
       
-      <h1>吉原 麻衣子</h1>
+      <h1><font color=#990066>吉原 麻衣子</font></h1>
       <h2>≪職業≫会社員（Zサポート）</h2>
       <h3>≪居住地≫岡崎市</h3>
       <pre><ul>
@@ -18,6 +25,5 @@
       </ul></pre>
       <img src="photo.png" width="76.9" height="102.4px">
       <pre><font color="white">&#009;1歳の息子がいます。<br>&#009;3月に第2子出産予定です。<br>&#009;微妙につわりが終わらないので、<br>&#009;講義中にもぐもぐしていたら、気持ち悪いんだな、と<br>&#009;温かく見守ってください…</font></pre>
-      <a href="profile.html">NEW</a>
    </body>
 </html>
