--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
       </ul></pre>
       <img src="photo.png" width="76.9" height="102.4px">
       <pre><font color="white">&#009;1歳の息子がいます。<br>&#009;3月に第2子出産予定です。<br>&#009;微妙につわりが終わらないので、<br>&#009;講義中にもぐもぐしていたら、気持ち悪いんだな、と<br>&#009;温かく見守ってください…</font></pre>
+      <a href="profile.html">NEW</a>
    </body>
 </html>
