--- a/bz.html
+++ b/bz.html
@@ -59,5 +59,6 @@
           <h3><a href="https://bz-vermillion.com/discography/sg_53.html" target="_blank">single: 声明 / Still Alive 2017 "Still Alive"</a></h3>
         </div>
       </div>
+      <p><a href="profile.html">戻る</a></p>
   </body>
 </html>
