--- a/nail.html
+++ b/nail.html
@@ -129,5 +129,6 @@
           <h3>ウルトラマン</h3>          
         </div>
       </div>
+      <p><a href="profile.html">戻る</a></p>
   </body>
 </html>
