--- a/other.html
+++ b/other.html
@@ -109,5 +109,6 @@
           <h3>中秋の名月</h3>          
         </div>
       </div>
+      <p><a href="profile.html">戻る</a></p>
   </body>
 </html>
